data/forge_javadoc/1.7.10/raw/net/minecraft/client/audio/SoundManager.md
---
title: "SoundManager"
description: "public class SoundManager extends java.lang.Object"
package: "net/minecraft/client/audio"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/audio/SoundManager.html"
sourceType: javadoc
---

# SoundManager

**Inheritance:** java.lang.Object → net.minecraft.client.audio.SoundManager

## Class signature

```java
public class SoundManager extends java.lang.Object
```

## Constructors

- `SoundManager(SoundHandler p_i45119_1_, GameSettings p_i45119_2_)`

## Methods

- `void addDelayedSound(ISound p_148599_1_, int p_148599_2_)`
- `boolean isSoundPlaying(ISound p_148597_1_)`
- `void pauseAllSounds()`
- `void playSound(ISound p_148611_1_)`
- `void reloadSoundSystem()`
- `void resumeAllSounds()`
- `void setListener(EntityPlayer p_148615_1_, float p_148615_2_)`
- `void setSoundCategoryVolume(SoundCategory p_148601_1_, float p_148601_2_)`
- `void stopAllSounds()`
- `void stopSound(ISound p_148602_1_)`
- `void unloadSoundSystem()`
- `void updateAllSounds()`

## Fields

- `SoundHandler sndHandler`
